Fix wrap mode selector button in edit page

--- a/src/styles/primeng-theme/components/_selectbutton.scss
+++ b/src/styles/primeng-theme/components/_selectbutton.scss
@@ -11,6 +11,7 @@
         $selectbutton-normal-shadow
     );
     height: 48px;
+    white-space: nowrap;
 
     [secondary] & {
         box-shadow: none;
